k8s/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin-ns

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: pgadmin-pvc
#   namespace: pgadmin-ns
# spec:
#   accessModes:
#   - ReadWriteOnce
#   resources:
#     requests:
#       storage: 500Mi
#   storageClassName: local-path
#   #storageClassName: standard # GKE
#   volumeMode: Filesystem
