k8s/pgadmin/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin     
      annotations:
        # anotacao apenas para alterar e gerar no deploy sem alterar as configuraçoes
        image-version: 2022-09-13_1338
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - containerPort: 5454

          # readinessProbe:
          #   httpGet:
          #     path: /pgadmin/login
          #     port: 5454
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   failureThreshold: 20

      #     volumeMounts:
      #       - name: pgadmin-data
      #         mountPath: /var/lib/pgadmin   

      #     securityContext:
      #       runAsUser: 0
                  
      # volumes:
      # - name: pgadmin-data
      #   persistentVolumeClaim:
      #     claimName: pgadmin-pvc
