k8s/pgadmin/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: pgadmin-ns
spec:
  selector:
    app: pgadmin
  ports:
    - port: 5454
