k8s/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ing
  namespace: pgadmin-ns
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /pgadmin/$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /pgadmin;

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /pgadmin
        backend:
          service:
            name: pgadmin-svc
            port: 
              number: 5454
